buildscript {
  repositories {
    mavenLocal()
    mavenCentral()
    jcenter()
  }

  dependencies {
    classpath "org.elasticsearch.gradle:build-tools:9.1.4"
  }
}

repositories {
  mavenLocal()
  mavenCentral()
}

group = 'org.elasticsearch.plugin'
version = "9.1.4"

apply plugin: 'java'
apply plugin: 'idea'
apply plugin: 'elasticsearch.esplugin'
apply plugin: 'elasticsearch.yaml-rest-test'

ext {
  licenseFile = rootProject.file('NOTICE.txt')
  noticeFile = rootProject.file('NOTICE.txt')
}

esplugin {
    name 'elasticsearch-japanese-suggester'
    description 'Suggester for Japanese'
    classname 'org.elasticsearch.plugin.JapaneseSuggesterPlugin'
}

dependencies {
    compileOnly "org.elasticsearch:elasticsearch:9.1.4"
    compileOnly "org.elasticsearch:elasticsearch-x-content:9.1.4"
    compileOnly "org.elasticsearch.plugin:elasticsearch-plugin-api:9.1.4"
    compileOnly "org.apache.lucene:lucene-analysis-kuromoji:10.2.2"
    compileOnly "com.fasterxml.jackson.core:jackson-core:2.17.0"

    testImplementation "org.elasticsearch:elasticsearch:9.1.4"
    testImplementation "org.elasticsearch:elasticsearch-x-content:9.1.4"
    testImplementation "org.apache.lucene:lucene-analysis-kuromoji:10.2.2"
    testImplementation "org.apache.lucene:lucene-test-framework:10.2.2"
    testImplementation "org.elasticsearch.test:framework:9.1.4"
    testImplementation "org.elasticsearch.test:yaml-rest-runner:9.1.4"
}

// Force use of Hamcrest 3.0 and exclude the old hamcrest-core to avoid conflicts
configurations.testRuntimeClasspath {
    resolutionStrategy {
        force 'org.hamcrest:hamcrest:3.0'
    }
    exclude group: 'org.hamcrest', module: 'hamcrest-core'
}

sourceCompatibility = 21
targetCompatibility = 21

tasks.withType(JavaCompile) {
    options.compilerArgs << '-Xlint:deprecation'
}

tasks.withType(Test) {
    jvmArgs '--enable-native-access=ALL-UNNAMED'

    // Set LD_LIBRARY_PATH so JNI can find the zstd library
    environment 'LD_LIBRARY_PATH', '/usr/lib/x86_64-linux-gnu:/lib/x86_64-linux-gnu'

    // Configure embedded test cluster for REST integration tests
    systemProperty 'tests.rest.load_packaged', 'false'
}
